--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@ title: Home
 ---
 <h1>About Me</h1>
 <p>
-I am a final-year CSE Ph.D. candidate at UC, San Diego with an expected graduation date of September, 2021 and open for job opportunities. I am interested in robotics and artificial intelligence for action-based problem-solving in semi-structured and dynamic environments. I am advised by Dr. Henrik I. Christensen and Dr. Ashok K. Goel from Georgia Tech. 
+A final-year CSE Ph.D. candidate at UC, San Diego with an expected graduation date of September, 2021 and open for job opportunities. I am interested in robotics and artificial intelligence applied in semi-structured and dynamic environments. I am advised by Dr. Henrik I. Christensen and Dr. Ashok K. Goel from Georgia Tech. 
 </p>
 
 <h2>Research Motivation</h2>
 <p>
-I am motivated by robotics applications which impact and help human counterparts in the real-world. Given this motivation I find model-based reasoning a strong tool to frame planning problems thereby making them interpretable and introspectable. This knowledge can then be used to generate dialogues between a human and a robot to either guide the robot for a novel problem or explain the reason for departing from a plan or why a failure occurred. My research-work has consistently focused on approaches that enable data-based learning and its interpretable explanation.
+I am motivated by robotics applications which impact and help human counterparts in the real-world. Given this motivation I find model-based reasoning a strong tool to frame planning problems thereby making them interpretable and introspectable. This knowledge can then be used to generate dialogues between a human and a robot to either guide the robot for a novel problem or explain the reason for departing from a plan or why a failure occurred. My research-work has consistently focused on approaches that enable data-based learning and its interpretable explanations on various collaborative robots.
 </p>
+
 <div class="row">
   <div class="column">
     <img src="{{site.url}}/resources/selfie_with_fetch.jpg" alt="selfie taken by Fetch" width="100%">
@@ -23,9 +24,10 @@ I am motivated by robotics applications which impact and help human counterparts
 
 <h2>Ph.D. Thesis</h2>
 <p>
-My research has been looking at how to ground an abstract action like <kbd>Pick('pulley')</kbd> into physical variables and observations so that a robot can monitor progress of its own plan. If the robot fails, we use a trace of this plan and its grounding to learn what went wrong and its solution. My thesis is about doing this kind of failure repair at multiple levels of planning, i.e. skill, task and mission specifications. In manufacturing we can use these grounded explanations along with high-level knowledge of domain to create rich set of interactions between a manufacturing robot and its human tutor.
+My research has been looking at how to ground an abstract action like <kbd>Pick('pulley')</kbd> along-with its preconditions and effects into physical variables and observations so that a robot can monitor progress of its own plan. If the robot fails, we use a trace of this plan and its grounding to learn what went wrong and its solution. My thesis is about doing this kind of failure repair at multiple levels of planning, i.e. skill, task and mission specifications. In manufacturing we can use these grounded explanations along with high-level knowledge of domain to create rich set of interactions between a manufacturing robot and its human tutor/peer.
 <br>
-Apart from academic research I have also interned for Vecna Robotics and Honda Research Institute - USA. While the earlier years of my Masters and Ph.D. focused on mobile platforms and navigational problems in dynamic environments, my thesis grounds model-based reasoning for application on manipulators.
+<br>
+Apart from academia, I have also interned for Vecna Robotics and Honda Research Institute - USA. While the earlier years of my Masters and Ph.D. research focused on mobile platforms and navigational problems in dynamic environments, my thesis grounds model-based reasoning for application on manipulators.
 </p>
 
 <!-- <p>
